<resources>
    <string name="app_name" translatable="false">MathStorm</string>
    <string name="Title_MainPage">Aprendizaje</string>
    <string name="UnderTitle_MainPage">Elige tu camino:</string>
    <string name="SecondUnderTitle_MainPage">aprende hoy o pon a prueba lo que sabes</string>
    <string name="FirstButtonText_MainPage">Aprende</string>
    <string name="SecondButtonText_MainPage">Ejercicios</string>
    <string name="mainPage">Pagina principal</string>
    <string name="Aritm">Ejercicios Aritmética Básica</string>
    <string name="AritmExp">Ejemplos Aritmética Básica</string>
    <string name="Aritm2">Ejercicios Aritmética Avanzada</string>
    <string name="Aritm2Exp">Ejemplos Aritmética Avanzada</string>
    <string name="Add">Suma</string>
    <string name="Add_Text">Aprende a sumar</string>
    <string name="Subs">Resta</string>
    <string name="Subs_Text">Funcionamiento detrás de la resta</string>
    <string name="Mult">Multiplicación</string>
    <string name="Mult_Text">Para entender el uso de la multiplicación</string>
    <string name="Div">División</string>
    <string name="Div_Text">Entiende el cociente y resto de la división</string>
    <string name="Exp">Potencias</string>
    <string name="Exp_Text">Realiza operaciones con multiplicaciones aditivas</string>
    <string name="Root">Raíces</string>
    <string name="Root_Text">Calcula el paso más allá de la división</string>
    <string name="LoginSuccessful">Sesion iniciada correctamente</string>
    <string name="LoginUnsusccessful">Error al iniciar sesión, intente otro usuario o contraseña</string>
    <string name="WelcomeMessage">Bienvenido a MathStorm</string>
    <string name="ImgDesc">Olas oceánicas agitadas rompiendo contra la costa rocosa al atardecer</string>
    <string name="bienvenido">Bienvenido a MathStorm</string>
    <string name="frase1">Inicia sesion para continuar a la aplicacion</string>
    <string name="CorreoEjemplo">Correo@ejemplo.com</string>
    <string name="contraseña">Contraseña</string>
    <string name="sesion">Iniciar Sesion</string>
    <string name="registro">Registrarse</string>
    <string name="cuenta">Crear Cuenta</string>
    <string name="frase2">Registrate y empieza a aprender </string>
    <string name="nombre">Tu Nombre</string>
    <string name="confirmar">Confirmar Contraseña</string>
    <string name="frase3">¿Ya tienes cuenta?</string>
    <string name="nom">Nombre:</string>
    <string name="password">Contraseña:</string>
    <string name="correo">Correo:</string>
    <string name="con2">Confirmar tu contraseña:</string>
    <string name="ans">Introduce tu respuesta</string>
    <string name="ansC">Introduce el cociente de la division</string>
    <string name="ansR">Introduce el resto de la operación</string>
    <string name="nuevapregunta">Crear Nueva Pregunta</string>
    <string name="comprobar">Comprobar</string>
    <string name="estadisticas">Tus Estadísticas:</string>
    <string name="ejemplosV"> Ultimo Ejemplo visto:</string>
    <string name="ejerciciosC">Ejercicios completados:</string>
    <string name="racha">Racha actual:</string>
    <string name="info">Informacion personal:</string>
    <string name="cerrarS">cerrar sesion</string>
    <string name="underTextExample">Aprende paso a paso con tutoriales</string>
    <string name="underTextExercise">Pon a prueba lo que sabes</string>
    <string name="Yaestas">Ya estas en esa pagina</string>
    <string name="gracias">Agradecimientos</string>



    <string name="dias">dias</string>
    <string name="incorrect">❌ Incorrecto</string>
    <string name="correct">✅ Correcto</string>
    <string name="introduceAnswer">Introduce una respuesta</string>
    <!--Strings ultimo visto-->
    <string name="ultimoVistoSuma">Suma</string>
    <string name="ultimoVistoResta">Resta</string>
    <string name="ultimoVistoMultiplicacion">Multiplicación</string>
    <string name="ultimoVistoDivision">División</string>
    <string name="ultimoVistoRaices">Raices</string>
    <string name="ultimoVistoPotencias">Potencias</string>
    <string name="ultimoVistoDefault" translatable="false">___</string>
    <!--Strings para los ejemplos-->
    <!--Suma-->
    <string name="suma">Suma Básica</string>
    <string name="firstStepS">Paso 1: Alinear los números</string>
    <string name="firstStepExpS">Coloca los números uno debajo del otro, alineando las unidades.</string>
    <string name="secondStepS">Paso 2: Sumar las unidades</string>
    <string name="secondStepExpS">Suma las cifras de la columna de las unidades: 5 + 3 = 8</string>
    <string name="thirdStepS">Paso 3: Sumar las decenas</string>
    <string name="thirdStepExpS">Suma las cifras de la columna de las decenas: 2 + 1 = 3</string>
    <string name="resultS">Resultado</string>
    <string name="resultFinishS">¡Perfecto! 25 + 13 = 38</string>

    <!--Resta-->
    <string name="resta">Resta Básica</string>
    <string name="firstStepR">Paso 1: Alinear los números</string>
    <string name="firstStepExpR">Coloca el número mayor arriba y alinea las unidades.</string>
    <string name="secondStepR">Paso 2: Restar las unidades</string>
    <string name="secondStepExpR">Resta las unidades: 5 - 3 = 2</string>
    <string name="thirdStepR">Paso 3: Restar las decenas</string>
    <string name="thirdStepExpR">Resta las decenas: 2 - 1 = 1</string>
    <string name="resultR">Resultado</string>
    <string name="resultFinishR">¡Perfecto! 25 - 13 = 12</string>

    <!--Multiplicacion-->
    <string name="multiplicacion">Multiplicación Básica</string>
    <string name="firstStepM">Paso 1: Repetir sumas iguales</string>
    <string name="firstStepExpM">Multiplicar es sumar el mismo número varias veces.</string>
    <string name="secondStepM">Paso 2: Repetir la suma</string>
    <string name="secondStepExpM">Sumamos 4 tres veces: 4 + 4 + 4</string>
    <string name="thirdStepM">Paso 3: Calcular el resultado</string>
    <string name="thirdStepExpM">sumamos todo</string>
    <string name="resultM">Resultado</string>
    <string name="resultFinishM">¡Perfecto! 4 × 3 = 12</string>

    <!--División-->
    <string name="división">División Básica</string>
    <string name="firstStepD">Paso 1: Entender la división</string>
    <string name="firstStepExpD">Dividir es repartir una cantidad en partes iguales.</string>
    <string name="secondStepD">Paso 2: Repartir en grupos</string>
    <string name="secondStepExpD">Repartimos el 13 en 3 grupos iguales.</string>
    <string name="thirdStepD">Paso 3: Calcular el resultado</string>
    <string name="thirdStepExpD">Sumamos lo que se repartió.</string>
    <string name="resultD">Resultado</string>
    <string name="resultFinishD">Si 4 × 3 = 12 y sobra 1, entonces: 13 ÷ 3 = 4 y resto 1</string>

    <!--Raices-->
    <string name="Raiz">Raíz Básica</string>
    <string name="firstStepRa">Paso 1: Entender la raíz</string>
    <string name="firstStepExpRa">Sacar una raíz es encontrar un número que, al multiplicarse por sí mismo, dé otro número. Aquí queremos saber cuál es la raíz cuadrada de 13.</string>
    <string name="secondStepRa">Paso 2: Buscar el número más cercano</string>
    <string name="secondStepExpRa">Buscamos un número que al multiplicarse por sí mismo no pase de 13. Sabemos que:</string>
    <string name="thirdStepRa">Paso 3: Calcular el resto</string>
    <string name="thirdStepExpRa">Restamos para ver cuánto falta:</string>
    <string name="resultRa">Resultado</string>
    <string name="resultFinishRa">La raíz cuadrada de 13 es: √13 = 3 y resto 4</string>
    <!--Potencias-->
    <string name="Potencia">Potencias Básicas</string>
    <string name="firstStepP">Paso 1: Entender la potencia</string>
    <string name="firstStepExpP">Una potencia es multiplicar un mismo número varias veces. Aquí vamos a calcular 3² (3 elevado a 2).</string>
    <string name="secondStepP">Paso 2: Multiplicar la base</string>
    <string name="secondStepExpP">La base es 3 y el exponente es 2, así que multiplicamos el 3 dos veces:</string>
    <string name="thirdStepP">Paso 3: Calcular el resultado</string>
    <string name="thirdStepExpP">Hacemos la multiplicación:</string>
    <string name="resultP">Resultado</string>
    <string name="resultFinishP">Entonces: 3² = 9</string>

</resources>