<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackground"
    tools:context=".login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/texto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:background="@color/white">
            <TextView
                android:id="@+id/nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nom"
                app:startIconDrawable="@drawable/outline_attach_email_24"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CorreoEjemplo"
                    android:textColorHint="@color/black"
                    android:gravity="center_horizontal"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/contraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/til1"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/contraseña"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/outline_keyboard_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña"
                    android:gravity="center_horizontal"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:text="@string/sesion"
                android:onClick="openMain"
                android:backgroundTint="@color/button_custom"
                app:layout_constraintTop_toBottomOf="@id/til2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/buttonSignup"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:text="@string/registro"
                android:onClick="openSignup"
                android:backgroundTint="@color/button_custom"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
