<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EjerciciosActivity"
    android:layout_gravity="center"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="520dp"
        app:layout_constraintEnd_toEndOf="@id/guideLine2"
        app:layout_constraintEnd_toStartOf="@id/guideLine2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guideLine1"
        app:layout_constraintStart_toStartOf="@id/guideLine1"
        tools:layout_editor_absoluteY="105dp"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:layout_marginStart="12dp"
                android:text="@string/Aritm"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/SumaCv"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="12dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="82dp"
                        android:layout_height="82dp"
                        android:src="@drawable/suma"
                        />
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="82dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/Add"/>
                        <TextView
                            android:layout_marginTop="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/Add_Text"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:id="@+id/RestaCv"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/resta"
                        />
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="82dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/Subs"/>
                        <TextView
                            android:layout_marginTop="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/Subs_Text"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:id="@+id/MultiCv"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/multi"
                        />
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="82dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/Mult"/>
                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/Mult_Text"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:id="@+id/DivsCv"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/div"
                        />
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="82dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/Div"/>
                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/Div_Text"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        />
</androidx.constraintlayout.widget.ConstraintLayout>